lesson 9 (third check) 07.07.23